# iortcw

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: appimage.yml  emscripten.yml  flatpak.yml  linux.yml  macos.yml  release.yml  windows.yml
ET/: CMakeLists.txt
ET/etmain/ui/: menudef.h  menumacros.h
ET/master-server/: master-cf.js  master.js  package-lock.json  package.json  wrangler.toml
ET/src/botai/: ai_cmd.c  ai_cmd.h  ai_distances.h  ai_dmgoal_mp.c  ai_dmgoal_mp.h  ai_dmnet_mp.c  ai_dmnet_mp.h  ai_dmq3.c  ai_dmq3.h  ai_func_decs.h  ai_funcs.h  ai_main.c  ai_main.h  ai_matrix.h  ai_script.c  ai_script_actions.c  ai_team.c  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
ET/src/botlib/: aasfile.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_interface.c  be_interface.h  (+17 more)
ET/src/bspc/: aas_areamerging.c  aas_areamerging.h  aas_cfg.c  aas_cfg.h  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_facemerging.h  aas_file.c  aas_file.h  aas_gsubdiv.c  aas_gsubdiv.h  aas_map.c  aas_map.h  aas_prunenodes.c  aas_prunenodes.h  aas_store.c  aas_store.h  be_aas_bspc.c  be_aas_bspc.h  brushbsp.c  bspc.c  csg.c  faces.c  glfile.c  l_bsp_ent.c  l_bsp_ent.h  l_bsp_q1.c  l_bsp_q1.h  l_bsp_q2.c  l_bsp_q2.h  l_bsp_q3.c  l_bsp_q3.h  l_bsp_sin.c  l_bsp_sin.h  l_cmd.c  l_cmd.h  l_log.c  (+29 more)
ET/src/cgame/: cg_atmospheric.c  cg_character.c  cg_commandmap.c  cg_consolecmds.c  cg_debriefing.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_fireteamoverlay.c  cg_fireteams.c  cg_flamethrower.c  cg_info.c  (+29 more)
MP/: CMakeLists.txt
MP/code/asm/: ftola.c
MP/code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  (+25 more)
MP/code/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_flamethrower.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newdraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_spawn.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c
MP/code/client/: cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keycodes.h  keys.h  libmumblelink.h  snd_codec.c  snd_dma.c  snd_local.h  snd_main.c  snd_mix.c  snd_openal.c  snd_public.h  snd_wavelet.c
MP/code/game/: ai_cast.c  ai_cast.h  ai_cast_characters.c  ai_cast_debug.c  ai_cast_events.c  ai_cast_fight.c  ai_cast_fight.h  ai_cast_func_attack.c  ai_cast_func_boss1.c  ai_cast_funcs.c  ai_cast_global.h  ai_cast_script.c  ai_cast_script_actions.c  ai_cast_script_ents.c  ai_cast_sight.c  ai_cast_think.c  ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.h  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_main.h  ai_team.c  ai_team.h  bg_animation.c  bg_lib.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  chars.h  g_active.c  g_alarm.c  g_antilag.c  g_bot.c  (+28 more)
MP/code/null/: null_client.c  null_input.c
MP/code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  huffman.c  md5.c  msg.c  net_chan.c  net_ip.c  pbmd5.c  puff.c  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  vm.c  vm_interpreted.c  vm_powerpc_asm.c  vm_sparc.c  vm_x86.c
MP/code/rend2/: qgl.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_curve.c  tr_extramath.h  tr_extratypes.h  tr_flares.c  tr_glsl.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_noise.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
MP/code/renderer/: anorms256.h  qgl.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_cmesh.c  tr_curve.c  tr_flares.c  tr_font.c  tr_image.c  tr_image_bmp.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_types.h  tr_world.c
MP/code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_icon.h  sdl_input.c
MP/code/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_wallhack.c  sv_world.c
MP/code/splines/: math_quaternion.h  q_splineshared.h  splines.h  util_str.h
MP/code/sys/: sys_main.c  sys_unix.c  sys_win32.c
MP/code/tools/lcc/cpp/: cpp.c  include.c  macro.c
MP/code/tools/lcc/lburg/: gram.c  lburg.h
MP/code/tools/lcc/src/: init.c  inits.c  lex.c  main.c  prof.c  simp.c  stmt.c  sym.c  trace.c
MP/code/ui/: ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
MP/main/ui/: menudef.h
MP/main/ui_mp/: menudef.h
SP/: CMakeLists.txt
libs/: CMakeLists.txt
(+619 files in other folders)
